# chumlee-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  PRIVACYPOLICY.md  Procfile  README.md  TOS.md  bot.py  chumlee-bot-firebase-adminsdk-r5ehf-2fca8ef380.json  chumleebot.py  databasefunctions.py  dbfunctions.py  functions.py  items.json  justfile  prawnsrars.py  profile.py  pyproject.toml  requirements.txt
command/: greetings.py
command/check/: checks.py
command/dice/: dice.py
command/error/: error_handlers.py  errors.py
command/pawnshop/: lotto.py  medal.py  pawnshoptransaction.py  transaction.py
command/stockmarket/: stock_market.py
command/user/: help.py  profile.py  registration.py  transaction.py  usertransaction.py
error/: error_handlers.py  errors.py
resources/: firebaseinfo.py  items.json  medalprices.py  medals.py  prawnsrars.py
src/: bot.py
src/command/stockmarket/: stock_market.py
src/command/user/: profile.py
src/error/: error_handlers.py
src/util/database/: config.py
src/util/pawnshop/: appraisal.py  medal.py
util/: analytics.py  channel_bind.py  emoji.py  log.py  message_triggers.py  reaction_triggers.py  status.py
util/database/: config.py  cooldown_actions.py  guild_actions.py  stock_market_actions.py  transaction_actions.py  user_actions.py
util/database/error/: errors.py
util/pawnshop/: appraisal.py  chummedal.py  cyberbullying.py  level.py  lottodetails.py  medal.py
util/stockmarket/: stock_market.py  stock_market_job.py  stock_price.py  stock_returns.py
view/pawnshop/: AppraisalOfferView.py  LottoStartView.py
(+2 files in other folders)
